Fix navbar too narrow on Cart page

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -6,7 +6,7 @@
 
   gap: 20px;
   height: 50px;
-  width: 100%;
+  width: 95vw;
 
   margin-top: 10px;
   margin-bottom: 20px;
